# advent-of-code

./: .gitignore  Cargo.toml  README.md
aoc-utils/: Cargo.toml
aoc-utils/src/: lib.rs  main.rs
rust-2020/: Cargo.toml
rust-2020/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs  main.rs
rust-2021/: Cargo.toml
rust-2021/src/: day1.rs  day2.rs  day3.rs  main.rs
rust-2022/: Cargo.toml
rust-2022/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
rust-2023/: Cargo.toml
rust-2023/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
rust-2024/: Cargo.toml
rust-2024/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main.rs
rust-2025/: Cargo.toml
rust-2025/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  main.rs
